gitops/infrastructure/rustfs/rustfs-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-console
  namespace: object-storage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local-cluster-gateway
      namespace: networking
      sectionName: websecure

  hostnames:
    - rustfs.home

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: rustfs
          port: 9001
          weight: 1

# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: rustfs-s3
#   namespace: object-storage
# spec:
#   parentRefs:
#     - group: gateway.networking.k8s.io
#       kind: Gateway
#       name: local-cluster-gateway
#       namespace: networking
#       sectionName: websecure

#   hostnames:
#     - s3.rustfs.home

#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - group: ""
#           kind: Service
#           name: rustfs-headless
#           port: 9000
#           weight: 1
